--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 body {
   background-color: #f5ebdd;
-  background-image: url("images/fons2.jpeg");
+  background-image: url("images/fons.webp");
   background-size: contain;
   background-repeat: repeat;
   background-blend-mode: multiply;
